--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <header class="page-header">
-        <div><a href="#" aria-label="Go Back"><i class="fas fa-arrow-left"></i></a></div>
+        <div><a href="#" aria-label="Go Back"><img src="./assets/images/MaterialIcon1.svg" alt="Go Back"/></a></div>
         <div>
             <img src="./assets/images/expedite_ico_web.svg" alt="Icon"> 
             <span>Forecasting:</span>
